force-app/main/default/objects/Template__c.object
<CustomObject>
    <description>Sets of template stories that can be added to a release.</description>
    <fields>
        <fullName>Access__c</fullName>
        <description>Only the owner can view and use the template when it is set to &quot;Private&quot;.</description>
        <inlineHelpText>Only the owner can view and use the template when it is set to &quot;Private&quot;.</inlineHelpText>
        <label>Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_from_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this template was created from another template.</description>
        <inlineHelpText>If checked, this template was created from another template.</inlineHelpText>
        <label>Created from Template?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_User_is_Owner__c</fullName>
        <formula>if(OwnerId = $User.Id,true,false)</formula>
        <label>Current User is Owner?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the template, what it includes, or what it&apos;s for.</description>
        <inlineHelpText>Description of the template, what it includes, or what it&apos;s for.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Points_Beginner__c</fullName>
        <description>Estimated level of effort to implement the stories in this template for someone who is new to, or unfamiliar with, these tasks.</description>
        <inlineHelpText>Estimated level of effort to implement the stories in this template for someone who is new to, or unfamiliar with, these tasks.</inlineHelpText>
        <label>Estimated Points (Beginner)</label>
        <summarizedField>Template_Item__c.Estimated_Points_Beginner__c</summarizedField>
        <summaryForeignKey>Template_Item__c.Template__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Estimated_Points_Expert__c</fullName>
        <description>Estimated level of effort to implement the stories in this template for someone who has advanced experience with these tasks.</description>
        <inlineHelpText>Estimated level of effort to implement the stories in this template for someone who has advanced experience with these tasks.</inlineHelpText>
        <label>Estimated Points (Expert)</label>
        <summarizedField>Template_Item__c.Estimated_Points_Expert__c</summarizedField>
        <summaryForeignKey>Template_Item__c.Template__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Estimated_Points_Intermediate__c</fullName>
        <description>Estimated level of effort to implement the stories in this template for someone who is somewhat familiar with these tasks.</description>
        <inlineHelpText>Estimated level of effort to implement the stories in this template for someone who is somewhat familiar with these tasks.</inlineHelpText>
        <label>Estimated Points (Intermediate)</label>
        <summarizedField>Template_Item__c.Estimated_Points_Intermediate__c</summarizedField>
        <summaryForeignKey>Template_Item__c.Template__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Item_Count__c</fullName>
        <description>Number of template items (Stories) that come with this template.</description>
        <inlineHelpText>Number of template items (Stories) that come with this template.</inlineHelpText>
        <label>Item Count</label>
        <summaryForeignKey>Template_Item__c.Template__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Standard_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this template is included as part of the app and is available to all users.</description>
        <inlineHelpText>If checked, this template is included as part of the app and is available to all users.</inlineHelpText>
        <label>Standard Template?</label>
        <type>Checkbox</type>
    </fields>
    <label>Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Item_Count__c</columns>
        <columns>Access__c</columns>
        <columns>Standard_Template__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Estimated_Points_Beginner__c</columns>
        <columns>Estimated_Points_Intermediate__c</columns>
        <columns>Estimated_Points_Expert__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Templates</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Item_Count__c</columns>
        <columns>Access__c</columns>
        <columns>Standard_Template__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Estimated_Points_Beginner__c</columns>
        <columns>Estimated_Points_Intermediate__c</columns>
        <columns>Estimated_Points_Expert__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Templates</label>
    </listViews>
    <listViews>
        <fullName>Standard_Templates</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Item_Count__c</columns>
        <columns>Access__c</columns>
        <columns>Standard_Template__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Estimated_Points_Beginner__c</columns>
        <columns>Estimated_Points_Intermediate__c</columns>
        <columns>Estimated_Points_Expert__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Standard_Template__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Standard Templates</label>
    </listViews>
    <listViews>
        <fullName>Templates_Shared_by_Others</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Item_Count__c</columns>
        <columns>Access__c</columns>
        <columns>Standard_Template__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Estimated_Points_Beginner__c</columns>
        <columns>Estimated_Points_Intermediate__c</columns>
        <columns>Estimated_Points_Expert__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Standard_Template__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Access__c</field>
            <operation>equals</operation>
            <value>Public</value>
        </filters>
        <filters>
            <field>Current_User_is_Owner__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Templates Shared by Others</label>
    </listViews>
    <nameField>
        <label>Template</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Templates</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Standard_Templates_Must_Be_Public</fullName>
        <active>true</active>
        <description>All standard templates must also be public.</description>
        <errorConditionFormula>AND(Standard_Template__c,TEXT(Access__c) &lt;&gt; &apos;Public&apos;)</errorConditionFormula>
        <errorMessage>Access must be set to &quot;Public&quot; for all standard templates.</errorMessage>
    </validationRules>
</CustomObject>